Probably-easy TODO list:
	Remove Felids, because boring(?)
	Remove Labyrinths, because boring(?)
	Rename Megabat?
	Xom should mess up menu text occasionally for his followers (not to an untelligible extent, though)


Harder TODO list:
	Redo scoring system to induce experts to play hyperagressively
	Phase out paralysis in favor of a suite of new status effects
	Restore square spell ranges (This actually looks really hard)
	Reduce game length by 1/3 outside of extended endgame
		There are subtle balance issues involved!
	Tweak silent spectre, give Mennas a few holy-flavored ones as pets
		Specifically: Reduce spectre melee attack to negligible levels,
		give them crazy speed, have them cast Silence rather than keep
		a permanent aura.  Skeletal warrior packs past a certain point
		get a chance at having them.
	Nerf Mennas' defense.  Make him rely on his pets for Silence.
	Make Shoals a portal vault
	Make Invisibility more viable late-game/extended
		Reduce some See Invisible enemies to merely Sense Invisible, or no
		invisibility detection at all


Changes already made:
	Monsters may no longer invoke Zot traps against the player.
	Charms, Hexes, and Poison Magic reshuffled into Enchantments and Sorcery.  Some books consequently changed.
		May need to reconsider a species aptitude or two, but this isn't urgent.
	Haste and Slow nerf reverted.
	Crude hack in mon-place.cc to make Mennas not spawn.  Will remove when Mennas tweaked.
	Spell success rate now shown as an actual percentage, not an adjective.  Success >= 98% rounded up to 100%.
	Replaced Silence with Haste in the book of War Chants.
	Replaced Repel Missiles with Throw Frost in book of Minor Magic.
	Selective Amnesia restored as a spell.  Now found in the books of Wizardry, Enchantments, and Dreams.
	Give Assassins more needles (might revert if OP).  Now get 5 each of sleep, slow, confusion.
	Remove Shoals from early Lair lottery (kludgy, just rigged the lottery).